2004-08-03  Jerry James  <james@xemacs.org>

	* regex.c: Move #define gettext after #include "lisp.h" to avoid
	breaking the C++ build on Fedora systems.

2004-07-27  Malcolm Purvis  <malcolmp@xemacs.org>

	* frame-gtk.c (gtk_make_frame_visible):
	* frame-gtk.c (gtk_make_frame_invisible): Use map/unmap instead of
	show/hide.  This is what X uses and is prevents previously hidden
	widgets from suddenly reappearing.
	* gtk-xemacs.c (gtk_xemacs_paint):
	* gtk-xemacs.c (gtk_xemacs_draw):
	* gtk-xemacs.c (gtk_xemacs_expose): Only operate if the widget is
	drawable.
	* scrollbar-gtk.c (gtk_update_scrollbar_instance_status): Force
	size and location changes so that they can be seen before the next
	idle event.  Without this rapid changes to scrollbar properties
	are not seen.

2004-07-07  Malcolm Purvis  <malcolmp@xemacs.org>

	* console-gtk-impl.h:
	* console-gtk-impl.h (struct gtk_frame):
	* console-gtk-impl.h (FRAME_GTK_WIDGET_INSTANCE_HASH_TABLE):
	  Add hash tables track tab_control callback data.
	  Added #defines for GTK object data names.
	* console-gtk.h: Declaration of gtk_widget_to_frame().
	* frame-gtk.c (gtk_widget_to_frame): New.
	* frame-gtk.c (gtk_create_widgets):
	* frame-gtk.c (allocate_gtk_frame_struct):
	* frame-gtk.c (gtk_mark_frame):
	Manage frame callbakc hash tables.
	* glyphs-gtk.c (gtk_map_subwindow): Fix size and moving bugs.
	* glyphs-gtk.c (gtk_redisplay_widget): Use correct size for widgets.
	* glyphs-gtk.c (gtk_widget_instantiate_1): Force reconsideration
	of widget size.
	* glyphs-gtk.c (gtk_widget_query_geometry): New
	* glyphs-gtk.c (gtk_register_gui_item): New
	* glyphs-gtk.c (gtk_add_tab_item): New
	* glyphs-gtk.c (gtk_tab_control_callback): New
	* glyphs-gtk.c (gtk_tab_control_instantiate): New
	* glyphs-gtk.c (gtk_tab_control_redisplay): Set notebook page.
	Use correct list when loading item.
	* glyphs-gtk.c (image_instantiator_format_create_glyphs_gtk):
	Register new methods.